Consultando dados do solicitante

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
+
+# integrações
+analise.url.base=http://localhost:9999
