Melhorando a visibilidade da nossa aplicação para equipe de operação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 # integrações
 analise.url.base=http://localhost:9999
+
+# actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
+management.endpoints.web.cors.allowed-origins=http://localhost
+management.endpoints.web.cors.allowed-methods=GET
+
