Associar o cartão criado com a proposta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # integrações
 analise.url.base=http://localhost:9999
+contas.url.base=http://localhost:8888
 
 # actuator
 management.endpoint.health.show-details=always
