Rodando a aplicação via docker

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>proposta</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
