--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/proposta
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${PROPOSTA_DATABASE_URL}
+spring.datasource.username=${PROPOSTA_DATABASE_USERNAME}
+spring.datasource.password=${PROPOSTA_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
