--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ management.endpoints.web.exposure.include=health
 management.endpoints.web.cors.allowed-origins=http://localhost
 management.endpoints.web.cors.allowed-methods=GET
 
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
+
+
