Habilitando as métricas para o prometheus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ contas.url.base=http://localhost:8888
 
 # actuator
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoints.prometheus.enabled=true
 management.endpoints.web.cors.allowed-origins=http://localhost
 management.endpoints.web.cors.allowed-methods=GET
 
