--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,12 +8,27 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 # integrações
-analise.url.base=http://localhost:9999
-contas.url.base=http://localhost:8888
+analise.url.base=${URL_API_ANALISE}
+contas.url.base=${URL_API_CONTAS}
 
 # actuator
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=health
-management.endpoints.web.cors.allowed-origins=http://localhost
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoints.prometheus.enabled=true
+management.endpoints.web.cors.allowed-origins=${PROMETHEUS_ORIGIN}
 management.endpoints.web.cors.allowed-methods=GET
+management.metrics.tags.aplicacao=serviço de proposta
+management.metrics.tags.ambiente=produção
+
+
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI}
+
+
+# Jaeger
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+opentracing.jaeger.service-name=${spring.application.name:proposta}
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT}
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
 
