--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ management.endpoints.web.exposure.include=health,prometheus
 management.endpoints.prometheus.enabled=true
 management.endpoints.web.cors.allowed-origins=http://localhost
 management.endpoints.web.cors.allowed-methods=GET
+management.metrics.tags.aplicacao=serviço de proposta
+management.metrics.tags.ambiente=desenvolvimento
 
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
