--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
+attributte.convert.secret=${ATTRIBUTE_CONVERT_SECRET}
 
 # integrações
 analise.url.base=${URL_API_ANALISE}
