--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
+attributte.convert.secret=secret-key-12345
 
 # integrações
 analise.url.base=http://localhost:9999
